--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>River Rafting Experiences | Dry Paddle Boat Adventures | Home Page</title>
+    <style>
+        .social-media-icon {
+            width: 60px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -23,7 +28,7 @@
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
+            <h4>Make Memories with Dry Oar</h4>
             <div class='button-box'>
                 <a class='book' href="contactus.html">Book Now</a>
             </div>
@@ -48,7 +53,7 @@
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
-            <p>Discover exciting river rafting experiences and dry paddle boat adventures at our base"</p>
+            <p>Discover exciting river rafting experiences and dry paddle boat adventures at our base</p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
     </main>
@@ -58,21 +63,15 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com">
-                <img class="social-media-icon"src="images/facebook.png" alt="fb icon">
+                <img class="social-media-icon" src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https://twitter.com">
-                <img class="social-media-icon"src="images/twitter.png" alt="twitter icon">
+                <img class="social-media-icon" src="images/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com">
-                <img class="social-media-icon"src="images/instagram.png" alt="instagram icon">
+                <img class="social-media-icon" src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
 </body>
-
-<style>
-    .social-media-icon{
-        width:60px;
-    }
-</style>
 </html>
