--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>River Rafting Experiences | Dry Paddle Boat Adventures | Home Page</title>
-    <style>
-        .social-media-icon {
-            width: 60px;
-        }
-    </style>
+    <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <img class="icon" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -50,6 +47,7 @@
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div> 
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
@@ -62,16 +60,17 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com"  target="_blank">
                 <img class="social-media-icon" src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com"  target="_blank">
                 <img class="social-media-icon" src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img class="social-media-icon" src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+</div>
 </body>
 </html>
