--- a/wwr/index.html
+++ b/wwr/index.html
@@ -50,7 +50,7 @@
             <div id="background"></div> 
             <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
             <section class="msg">
-                <h2>More Than Just The Thrill</h2>
+                <h2 class="second">More Than Just The Thrill</h2>
                 <p>Discover exciting river rafting experiences and dry paddle boat adventures at our base</p>
                 <a class='join' href="rivers.html">Join Us</a>
             </section>
