--- a/my_portfolio/site-plan.html
+++ b/my_portfolio/site-plan.html
@@ -34,7 +34,7 @@
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img class="logo-img" src="Images/logo.png" alt="Logo image">
+      <img class="logo-img" src="/my_portfolio/Images/logo.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -160,14 +160,14 @@
       </p>
       <p>Images for the Page 2</p>
       <div class="container-img">
-        <img class="img-project"src="Images/project1.png" alt="image for page">
-        <img class="img-project" src="Images/project1_2.png" alt="image for page">
-        <img class="img-project" src="Images/project2.png" alt="image for page">
-        <img class="img-project" src="Images/project2_2.png" alt="image for page">
-        <img class="img-project" src="Images/project3.png" alt="image for page">
-        <img class="img-project" src="Images/project3_3.png" alt="image for page">
-        <img class="img-project" src="Images/project4.png" alt="image for page">
-        <img class="img-project" src="Images/project4_4.png" alt="image for page">
+        <img class="img-project"src="/my_portfolio/Images/project1.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project1_2.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project2.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project2_2.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project3.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project3_3.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project4.png" alt="image for page">
+        <img class="img-project" src="/my_portfolio/Images/project4_4.png" alt="image for page">
     </div>
 
       </ul>
