--- a/my_portfolio/site-plan.html
+++ b/my_portfolio/site-plan.html
@@ -160,14 +160,14 @@
       </p>
       <p>Images for the Page 2</p>
       <div class="container-img">
-        <img class="img-project"src="/my_portfolio/Images/project1.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project1_2.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project2.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project2_2.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project3.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project3_3.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project4.png" alt="image for page">
-        <img class="img-project" src="/my_portfolio/Images/project4_4.png" alt="image for page">
+        <img class="img-project"src="Images/project1.png" alt="image for page">
+        <img class="img-project" src="Images/project1_2.png" alt="image for page">
+        <img class="img-project" src="Images/project2.png" alt="image for page">
+        <img class="img-project" src="Images/project2_2.png" alt="image for page">
+        <img class="img-project" src="Images/project3.png" alt="image for page">
+        <img class="img-project" src="Images/project3_3.png" alt="image for page">
+        <img class="img-project" src="Images/project4.png" alt="image for page">
+        <img class="img-project" src="Images/project4_4.png" alt="image for page">
     </div>
 
       </ul>
