--- a/wwr/contact-us.html
+++ b/wwr/contact-us.html
@@ -33,7 +33,7 @@
         <main class="home-grid">
             <section class="cnt-container">
                 <h4 class="txt-ctn">Contact us</h4>
-                <form action="submit">
+                <form action="submit" method="POST">
                 <div class="frm">
                     <input class="cnt-us" type="text" name=""  placeholder="Name">
                     <input class="cnt-us" type="text" name=""  placeholder="Surname">
