--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -12,6 +12,7 @@
 </head>
 <div class="content">
 <body>
+    <div class="full-container">
     <header >
         <a href="index.html">
             <img class="icon"src="images/logo.png" alt="logo-home">
@@ -118,6 +119,6 @@
 </footer>
 
    
-
+</div>
 
 </html>
