--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -10,7 +10,6 @@
 
     <title><BMC/></title>
 </head>
-<div class="content">
 <body>
     <div class="full-container">
     <header >
@@ -36,8 +35,8 @@
             <h4 class="title-hm fade-in hidden">Full Stack Developer</h4>
     
             <div class="btn-hm fade-in hidden">
-                <button class="btn-ctm">Contact me</button>
-                <button class="btn-pjs">My work</button>
+                <button class="btn-ctm" onclick="redirectTo('/contact-me.html')"> Contact me </button>
+                <button class="btn-pjs" onclick="redirectTo('/projects.html')">My work</button>
             </div>
         </div>
     </section>
@@ -130,6 +129,6 @@
 </footer>
 
    
-</div>
+
 
 </html>
