--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -100,7 +100,7 @@
             
 <footer >
 
-  <p class="ftr-p">© Brandon Caldarella 2023</p>
+  <p class="ftr-p"><BMC/></p>
 
   <div class="ft-social">
       <a href="https://www.linkedin.com/in/bmcaldarella/" target="_blank">
